# internship-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: handle.rs  ibytes.rs  icstr.rs  istr.rs  lib.rs  serde_support.rs  string.rs
