[package]
name = "internship"
version = "0.6.0"
authors = ["Hyeonu Park <nemo1275@gmail.com>"]

description = "Interned string and more"
homepage = "https://github.com/HyeonuPark/Internship-rs"
documentation = "https://docs.rs/internship"
repository = "https://github.com/HyeonuPark/Internship-rs.git"
keywords = ["string", "interned-string", "string-pool", "interned-bytes"]
categories = ["rust-patterns"]
readme = "README.md"
license = "MIT/Apache-2.0"

[features]
default = ["serde-compat"]
serde-compat = ["serde"]

[dependencies.serde]
version = "1.0"
optional = true

[badges.travis-ci]
repository = "HyeonuPark/internship-rs"
branch = "master"

[badges.codecov]
repository = "HyeonuPark/internship-rs"
branch = "master"
